...
    <string name="exit">Exit</string>
    <string name="day_of_the_week_log">Day of the Week Log:</string>
    <string name="input_type">Input Type:</string>
    <string name="energy_level">Energy Level</string>
    <string name="exhausted">Exhausted</string>
    <string name="tired">Tired</string>
    <string name="okay">Okay</string>
    <string name="energetic">Energetic</string>
    <string name="fully_energized">Fully Energized</string>
    <string name="hours_of_sleep">Hours of Sleep</string>
    <string name="_1_3_hours">1–3 Hours</string>
    <string name="_4_6_hours">4–6 Hours</string>
    <string name="_7_8_hours">7–8 Hours</string>
    <string name="_8_hours">8+ Hours</string>
    <string name="stress_levels_throughout_the_day">Stress Levels Throughout the Day</string>
    <string name="_1_2_intensity">1–2 Intensity</string>
    <string name="_3_5_intensity">3–5 Intensity</string>
    <string name="_6_8_intensity">6–8 Intensity</string>
    <string name="_9_10_intensity">9–10 Intensity</string>
    <string name="type_of_exercise">Type of Exercise</string>
    <string name="walking">Walking</string>
    <string name="running">Running</string>
    <string name="yoga">Yoga</string>
    <string name="gym_workout">Gym Workout</string>
    <string name="sports_activity">Sports Activity</string>
    <string name="other">Other</string>
    <string name="next"><![CDATA[Next ->]]></string>
    <string name="radio_button">Radio Button</string>
    <string name="slider">Slider</string>
    <string name="_1_3_cups">1–3 Cups</string>
    <string name="_3_5_cups">3–5 Cups</string>
    <string name="_6_7_cups">6–7 Cups</string>
    <string name="water_intake">Water Intake</string>
...
    <string name="breakfast">Breakfast</string>
    <string name="nutrition_meals">Nutrition/Meals</string>
    <string name="snacks">Snacks</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="mindfulness_or_meditation">Mindfulness or Meditation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="_3_meals_a_day">3 Meals a Day</string>
    <string name="inconsistent_eating_habits">Inconsistent Eating Habits</string>
    <string name="results">Results</string>
    <string name="spinner_list">Spinner</string>
    <string name="clicks">Clicks:</string>
    <string name="time">Time:</string>
    <string name="home">Home</string>
...
    <string name="add_food">Add Food</string>
    <string name="add_exercise">Add Exercise</string>

    <string name="app_title">Health Diary</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="create_account">Create Account</string>
    <string name="daily_diary">Daily Diary</string>
    <string name="wellness_goals">Wellness Goals\n</string>
    <string name="my_account">My Account</string>
    <string name="today_s_date">Today\'s Date</string>
    <string name="today_goal">Today\'s Goal</string>
    <string name="hello">Hello</string>
    <string name="everyone">Everyone!</string>
    <string name="create_wellness_goals">Create Wellness Goals</string>
    <string name="wellness_activity_label" />
    <string name="plus">+</string>
    <string name="save_goals">Save Goals</string>
    <string name="mindset">Mindset</string>
    <string name="overall_mood">Overall Mood</string>
    <string name="average_time">Average Time</string>
    <string name="fields_cant_be_empty">Fields Cannot be empty.</string>
    <string name="account_created_successfully">Account Created Successfully</string>
    <string name="Email">Email: john.doe@example.com</string>
    <string name="username">Username: JohnDoe</string>
    <string name="version">Version: 1.0</string>
    <string name="developer">Developer: Group Alpha</string>


    <item name="goalsLayout" type="id" />
    <item name="buttonAddGoal" type="id" />
    <item name="buttonSaveGoals" type="id" />
    <item name="textViewHeader" type="id" />
</resources>

