...
                    android:layout_height="wrap_content"
                    android:text="@string/energy_level"
                    android:textSize="18sp" />

                <!-- RadioGroup for RadioButtons -->
                <RadioGroup
                    android:id="@+id/optionsRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!-- RadioButton 1 -->
                    <RadioButton
                        android:id="@+id/option1e"
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tired" />

                    <!-- RadioButton 3 -->
                    <RadioButton
                        android:id="@+id/option3e"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/okay" />

                    <RadioButton
                        android:id="@+id/option4e"
...
                    android:layout_marginTop="16dp"
                    android:text="@string/hours_of_sleep"
                    android:textSize="18sp" />

                <!-- RadioGroup for RadioButtons -->
                <RadioGroup
                    android:id="@+id/options"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!-- RadioButton 1 -->
                    <RadioButton
                        android:id="@+id/option1s"
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_4_6_hours" />

                    <!-- RadioButton 3 -->
                    <RadioButton
                        android:id="@+id/option3s"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_7_8_hours" />

                    <RadioButton
                        android:id="@+id/option4s"
...
                    android:layout_marginTop="16dp"
                    android:text="@string/stress_levels_throughout_the_day"
                    android:textSize="18sp" />

                <!-- RadioGroup for RadioButtons -->
                <RadioGroup
                    android:id="@+id/optionsst"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!-- RadioButton 1 -->
                    <RadioButton
                        android:id="@+id/option1st"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_1_2_intensity" />

                    <!-- RadioButton 2 -->
                    <RadioButton
                        android:id="@+id/option2st"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_3_5_intensity" />

                    <!-- RadioButton 3 -->
                    <RadioButton
...
                    android:layout_marginTop="16dp"
                    android:text="@string/type_of_exercise"
                    android:textSize="18sp" />

                <!-- RadioGroup for RadioButtons -->
                <RadioGroup
                    android:id="@+id/optionse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!-- RadioButton 1 -->
                    <RadioButton
                        android:id="@+id/option1ex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/walking" />

                    <!-- RadioButton 2 -->
                    <RadioButton
...
                    android:layout_marginTop="16dp"
                    android:text="@string/nutrition_meals"
                    android:textSize="18sp" />

                <!-- RadioGroup for RadioButtons -->
                <RadioGroup
                    android:id="@+id/optionsn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!-- RadioButton 1 -->
                    <RadioButton
                        android:id="@+id/option1n"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_3_meals_a_day" />

                    <!-- RadioButton 2 -->
                    <RadioButton
...
