...
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/water_intake"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/sliderSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="4"
            android:tickMark="@drawable/tick_mark"/>

        <LinearLayout
...
            android:layout_marginTop="16dp"
            android:paddingLeft="16dp"
            android:text="@string/screen_time"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/sliderSeekBar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="4"
            android:tickMark="@drawable/tick_mark"/>

        <LinearLayout
...
            android:layout_marginTop="16dp"
            android:text="@string/hours_of_sleep"
            android:paddingLeft="16dp"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/sliderSeekBar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="4"
            android:tickMark="@drawable/tick_mark"/>

        <LinearLayout
...
            android:layout_marginTop="16dp"
            android:text="@string/energy_level"
            android:paddingLeft="16dp"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/sliderSeekBar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="5"
            android:tickMark="@drawable/tick_mark"/>

        <LinearLayout
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tired" />

            <TextView
                android:id="@+id/OK"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/okay" />

...
            android:layout_marginTop="16dp"
            android:paddingLeft="16dp"
            android:text="@string/mindfulness_or_meditation"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/sliderSeekBar4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="2"
            android:tickMark="@drawable/tick_mark"/>

        <LinearLayout
...
