...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.445" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="36dp"
                    android:text="@string/today_goal"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
...
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/todayDateTextView" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:text="@string/everyone"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
...
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2">

                    <ImageButton
                        android:id="@+id/btnCreateAccount"
                        android:layout_width="104dp"
                        android:layout_height="98dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:onClick="onCreateAccountClick"
                        android:background="@drawable/button_background"
...
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2">

                    <ImageButton
                        android:id="@+id/btnDailyDiary"
                        android:layout_width="104dp"
                        android:layout_height="98dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:onClick="onDailyDiaryButtonClick"
                        android:background="@drawable/button_background"
...
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2">

                    <ImageButton
                        android:id="@+id/btnWellnessGoals"
                        android:layout_width="104dp"
                        android:layout_height="98dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:onClick="onWellnessGoalsClick"
                        android:background="@drawable/button_background"
...
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2">

                    <ImageButton
                        android:id="@+id/btnMyAccount"
                        android:layout_width="104dp"
                        android:layout_height="98dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="8dp"
                        android:onClick="onMyAccountActivity"
...
